--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <title>Jaxsun McCarthy Huggan</title>
 
+    <link rel="icon" href="img/inv.png">
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <!-- Fontawesome -->
