--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="icon" href="img/inv.png">
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet"/>
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Fontawesome -->
-    <link href="css/font-awesome.css" rel="stylesheet"/>
+    <link href="css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom Bootstrap CSS -->
-    <link href="css/bootstrap-custom.css" rel="stylesheet"/>
+    <link href="css/bootstrap-custom.css" rel="stylesheet">
 
   </head>
   <body>
@@ -105,6 +105,7 @@
                 <div class="col-md-2">
                 </div>
             </div>
+            <hr>
             <div class="row">
                 <div class="col-md-2">
                 </div>
