--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
                     <span class="visible-sm"><br></span>
                 </div>
                 <div class="col-md-9">
-                    <p><i class="fa fa-quote-left pull-left"></i>A Jaxsun is a strange beast not to be discounted.<i class="fa fa-quote-right"></i></p>
+                    <p ><i class="fa fa-quote-left pull-left"></i><strong>A Jaxsun is a strange beast not to be discounted.</strong><i class="fa fa-quote-right"></i></p>
                     <p>Hello I'm Jaxsun, Nice to meet you.</p>
+                    <p>I like to think about, play with, and make things.</p>
                 </div>
             </div>
         </div>
@@ -60,7 +61,7 @@
                 </div>
                 <div class="col-md-8">
                     <h2>Academic</h2>
-                    <p>I studied Computer Science and Physics at the <a href="http://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great companies like <a href="http://tasktop.com">Tasktop Technologies</a> and <a href="http://safe.com">Safe Software</a>.</p>
+                    <p>I studied Computer Science and Physics (with a sprinkling of Linguistics) at the <a href="http://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great companies like <a href="http://tasktop.com">Tasktop Technologies</a> and <a href="http://safe.com">Safe Software</a>.</p>
                 </div>
                 <div class="col-md-2">
                 </div>
@@ -79,47 +80,53 @@
                 </div>
                 <div class="col-md-8">
                     <h2>Professional</h2>
-                    <p>Currently I work as a Software Engineer at <a href="http://tasktop.com">Tasktop Technologies</a>. There I work to create great tools to improve the world of software delivery.</p>
+                    <p>Currently I work as a Software Engineer at <a href="http://tasktop.com">Tasktop Technologies</a>. There I work with some very clever people creating great tools to improve the world of software delivery.</p>
                 </div>
                 <div class="col-md-2">
                 </div>
         </div>
     </div>
     <div class="container well" id="personal">
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-8">
-                    <h2>Personal</h2>
-                    <p>Outside of the office and classroom I play goal in ball hockey as well a great many video games. Lately I've been enjoying my Nintendo WiiU and 3DS as well as my Playstation Vita.</p>
-                </div>
-                <div class="col-md-2">
-                </div>
+        <div class="row">
+            <div class="col-md-2">
             </div>
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-8">
-                    <p>If you want to stalk me on the internet I've made it easy for you by having an extremely discoverable name as well as leaving some buttons below.</p>
-                </div>
-                <div class="col-md-2">
-                </div>
+            <div class="col-md-8">
+                <h2>Personal</h2>
+                <p>Outside of the office and classroom I play goal in ball hockey as well a great many video games. Lately I've been enjoying my Nintendo WiiU and 3DS, as well as my Playstation Vita.</p>
             </div>
-            <hr>
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-8 text-center">
-                    <a href="https://plus.google.com/+JaxsunMcCarthyHuggan"><button class="btn btn-sm btn-google"><i class="fa fa-google-plus"></i> Google</button></a>
-                    <a href="https://twitter.com/jaxsunm"><button class="btn btn-sm btn-twitter"><i class="fa fa-twitter"></i> twitter</button></a>
-                    <a href="https://ca.linkedin.com/in/jaxsun"><button class="btn btn-sm btn-linkedin"><i class="fa fa-linkedin"></i> LinkedIn</button></a>
-                    <a href="https://github.com/jaxsun"><button class="btn btn-sm btn-github"><i class="fa fa-github-alt"></i> GitHub</button></a>
-                    <a href="https://steamcommunity.com/id/Jaxsun"><button class="btn btn-sm btn-steam"><i class="fa fa-steam"></i> Steam</button></a>
-                </div>
-                <div class="col-md-2">
-                </div>
+            <div class="col-md-2">
             </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+                <p>If you want to stalk me on the internet I've made it easy for you by having an extremely discoverable name as well as leaving some buttons below.</p>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8 text-center">
+                <a href="https://plus.google.com/+JaxsunMcCarthyHuggan"><button class="btn btn-sm btn-google"><i class="fa fa-google-plus"></i> Google</button></a>
+                <a href="https://twitter.com/jaxsunm"><button class="btn btn-sm btn-twitter"><i class="fa fa-twitter"></i> twitter</button></a>
+                <a href="https://ca.linkedin.com/in/jaxsun"><button class="btn btn-sm btn-linkedin"><i class="fa fa-linkedin"></i> LinkedIn</button></a>
+                <a href="https://github.com/jaxsun"><button class="btn btn-sm btn-github"><i class="fa fa-github-alt"></i> GitHub</button></a>
+                <a href="https://steamcommunity.com/id/Jaxsun"><button class="btn btn-sm btn-steam"><i class="fa fa-steam"></i> Steam</button></a>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
     </div>
+
+    <footer class="footer footer-default">
+      <div class="container">
+        <p class="text-muted"><i class="fa fa-heart"></i> A Product of Procrastination<a class="pull-right" href="http://jaxsunm.freehostia.com">It's a secret to everyone</a><span class=""fa fa</p>
+      </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
