--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" data-toggle="collapse" data-target="#navbar-collapse">
                     <li><a href="#professional">Professional</a></li>
                     <li><a href="#personal">Personal</a></li>
                 </ul>
