--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#"><i class="fa fa-chevron-up"></i> Jaxsun McCarthy Huggan</a>
+                <a class="navbar-brand" href="#"><i class="fa fa-chevron-up"></i> Jaxsun McCarthy <span class="hidden-xs">Huggan</span> </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                 </button>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            <!-- collapsible menu has hooks to collapse on touch -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav" data-toggle="collapse" data-target="#navbar-collapse">
                     <li><a href="#professional">Professional</a></li>
@@ -48,7 +48,7 @@
                     <span class="visible-sm"><br></span>
                 </div>
                 <div class="col-md-9">
-                    <p ><i class="fa fa-quote-left pull-left"></i><strong>A Jaxsun is a strange beast not to be discounted.</strong><i class="fa fa-quote-right"></i></p>
+                    <p ><i class="fa fa-quote-left pull-left"></i><strong>A Jaxsun is a strange beast not to be discounted.</strong></p>
                     <p>Hello I'm Jaxsun, Nice to meet you.</p>
                     <p>I like to think about, play with, and make things.</p>
                 </div>
