--- a/index.html
+++ b/index.html
@@ -110,12 +110,19 @@
         <div class="row">
             <div class="col-md-2">
             </div>
-            <div class="col-md-8 text-center">
+            <!--<div class="col-md-8 text-center">
                 <a href="https://plus.google.com/+JaxsunMcCarthyHuggan"><button class="btn btn-sm btn-google"><i class="fa fa-google-plus"></i> Google</button></a>
                 <a href="https://twitter.com/jaxsunm"><button class="btn btn-sm btn-twitter"><i class="fa fa-twitter"></i> twitter</button></a>
                 <a href="https://ca.linkedin.com/in/jaxsun"><button class="btn btn-sm btn-linkedin"><i class="fa fa-linkedin"></i> LinkedIn</button></a>
                 <a href="https://github.com/jaxsun"><button class="btn btn-sm btn-github"><i class="fa fa-github-alt"></i> GitHub</button></a>
                 <a href="https://steamcommunity.com/id/Jaxsun"><button class="btn btn-sm btn-steam"><i class="fa fa-steam"></i> Steam</button></a>
+            </div>-->
+            <div class="col-md-8 text-center">
+                <a href="https://plus.google.com/+JaxsunMcCarthyHuggan"><button class="btn btn-sm btn-google">Google</button></a>
+                <a href="https://twitter.com/jaxsunm"><button class="btn btn-sm btn-twitter">twitter</button></a>
+                <a href="https://ca.linkedin.com/in/jaxsun"><button class="btn btn-sm btn-linkedin">LinkedIn</button></a>
+                <a href="https://github.com/jaxsun"><button class="btn btn-sm btn-github">GitHub</button></a>
+                <a href="https://steamcommunity.com/id/Jaxsun"><button class="btn btn-sm btn-steam">Steam</button></a>
             </div>
             <div class="col-md-2">
             </div>
