--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-8 text-center">
-                <a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm">Google</a>
+                <a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-google">Google</a>
                 <a href="https://twitter.com/jaxsunm" class="btn btn-sm">twitter</a>
                 <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm">LinkedIn</a>
-                <a href="https://github.com/jaxsun" class="btn btn-sm">GitHub</a>
-                <a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm">Steam</a>
+                <a href="https://github.com/jaxsun" class="btn btn-sm btn-github">GitHub</a>
+                <a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-steam">Steam</a>
             </div>
             <div class="col-md-2">
             </div>
