stop buttons from being blocked by ad block

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title>Jaxsun McCarthy Huggan</title>
 
     <link rel="icon" href="img/inv.png">
@@ -39,7 +39,7 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="container well">
         <div class="jumbotron">
             <div class="row">
@@ -48,8 +48,8 @@
                     <span class="visible-sm"><br></span>
                 </div>
                 <div class="col-md-9">
-                    <p ><i class="fa fa-quote-left pull-left"></i><strong>A Jaxsun is a strange beast not to be discounted.</strong></p>
-                    <p>Hello I'm Jaxsun, Nice to meet you.</p>
+                    <p ><i class="fa fa-quote-left pull-left"></i><strong>Welcome stranger,</strong></p>
+                    <p>I'm Jaxsun, Nice to meet you.</p>
                     <p>I like to think about, play with, and make things.</p>
                 </div>
             </div>
@@ -111,11 +111,11 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-8 text-center">
-                <a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-google">Google</a>
-                <a href="https://github.com/jaxsun" class="btn btn-sm btn-github">GitHub</a>
-                <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-twitter">twitter</a>
-                <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm btn-linkedin">LinkedIn</a>
-                <a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-steam">Steam</a>
+                <a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-gg">Google</a>
+                <a href="https://github.com/jaxsun" class="btn btn-sm btn-gh">GitHub</a>
+                <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-tw">twitter</a>
+                <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm btn-li">LinkedIn</a>
+                <a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-st">Steam</a>
             </div>
             <div class="col-md-2">
             </div>
