fix twitter button try #2

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-md-8 text-center">
                 <a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-gg">Google</a>
                 <a href="https://github.com/jaxsun" class="btn btn-sm btn-gh">GitHub</a>
-                <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-tw">twitter</a>
+                <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-t">twitter</a>
                 <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm btn-li">LinkedIn</a>
                 <a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-st">Steam</a>
             </div>
