--- a/index.html
+++ b/index.html
@@ -56,34 +56,52 @@
         </div>
    	</div>
     <div class="container well" id="professional">
-            <div class="row">
+        <div class="row">
             <div class="col-md-2">
-                </div>
-                <div class="col-md-8">
-                    <h2>Academic</h2>
-                    <p>I studied Computer Science and Physics (with a sprinkling of Linguistics) at the <a href="http://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great companies like <a href="http://tasktop.com">Tasktop Technologies</a> and <a href="http://safe.com">Safe Software</a>.</p>
-                </div>
-                <div class="col-md-2">
-                </div>
             </div>
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-8">
-                    <p>At UBC I was continually involved with the <a href="http://physsoc.phas.ubc.ca">UBC Physics Society</a>, usually as Webmaster or Advertising Co-ordinator, and always as the grumpy old man.</p>
-                </div>
-                <div class="col-md-2">
-                </div>
+            <div class="col-md-8">
+                <h2>Professional</h2>
+                <p>Currently I work as a Software Engineer at <a href="http://tasktop.com">Tasktop Technologies</a>. There I work with some very clever people creating innovative tools to improve the world of software delivery.</p>
             </div>
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-8">
-                    <h2>Professional</h2>
-                    <p>Currently I work as a Software Engineer at <a href="http://tasktop.com">Tasktop Technologies</a>. There I work with some very clever people creating great tools to improve the world of software delivery.</p>
-                </div>
-                <div class="col-md-2">
-                </div>
+            <div class="col-md-2">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+                <p>Partly due to my role at Tasktop I am also a minor contributor to the great open source project <a href="https://eclipse.org/mylyn">Mylyn<a>, a part of the greater <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem.</p>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+                <p>On the side I've also made one small Android app. If you happen to use the application <a href="https://play.google.com/store/apps/details?id=net.nurik.roman.dashclock">Dashclock</a>, and you want the best integration with Google's SMS app <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.messaging">Messenger</a>, then you should take a look at my little <a href="https://play.google.com/store/apps/details?id=com.jaxsun.messagingdashclockextension">app</a> which brings the two together.</p>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+                <h2>Academic</h2>
+                <p>I studied Computer Science and Physics (with a sprinkling of Linguistics) at the <a href="http://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great companies like the aforementioned <a href="http://tasktop.com">Tasktop Technologies</a> and <a href="http://safe.com">Safe Software</a>.</p>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+                <p>At UBC I was continually involved with the <a href="http://physsoc.phas.ubc.ca">UBC Physics Society</a>, usually as Webmaster or Advertising Co-ordinator, and always as the grumpy old man.</p>
+            </div>
+            <div class="col-md-2">
+            </div>
         </div>
     </div>
     <div class="container well" id="personal">
@@ -92,7 +110,7 @@
             </div>
             <div class="col-md-8">
                 <h2>Personal</h2>
-                <p>Outside of the office and classroom I play goal in ball hockey as well a great many video games. Lately I've been enjoying my Nintendo WiiU and 3DS, as well as my Playstation Vita.</p>
+                <p>Outside of the office and classroom I play goal in ball hockey, as well a great many video games.</p>
             </div>
             <div class="col-md-2">
             </div>
@@ -128,9 +146,6 @@
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
