--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-8">
-                <p>Partly due to my role at Tasktop I am also a minor contributor to the great open source project <a href="https://eclipse.org/mylyn">Mylyn<a>, a part of the greater <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem.</p>
+                <p>Partly due to my role at Tasktop I am also a minor contributor to the great open source project <a href="https://eclipse.org/mylyn">Mylyn</a>, a part of the greater <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem.</p>
             </div>
             <div class="col-md-2">
             </div>
