--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-   	</div>
+     </div>
     <div class="container well" id="professional">
         <div class="row">
             <div class="col-md-2">
@@ -129,11 +129,12 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-8 text-center">
-                <a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-gg">Google</a>
+								<a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-gg">Google</a>
                 <a href="https://github.com/jaxsun" class="btn btn-sm btn-gh">GitHub</a>
-                <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-t">twitter</a>
                 <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm btn-li">LinkedIn</a>
-                <a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-st">Steam</a>
+                <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-t">twitter</a>
+								<a href="https://telegram.me/jaxsun" class="btn btn-sm btn-tl">Telegram</a>
+								<a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-st">Steam</a>
             </div>
             <div class="col-md-2">
             </div>
