tweak xs button presentation

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-gg">Google</a>
 	        <a href="https://github.com/jaxsun" class="btn btn-sm btn-gh">GitHub</a>
 	        <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm btn-li">LinkedIn</a>
-					<br class="visible-sm">
+					<br class="visible-xs">
 	        <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-t">twitter</a>
 					<a href="https://telegram.me/jaxsun" class="btn btn-sm btn-tl">Telegram</a>
 					<a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-st">Steam</a>
