remove copy/paste crap

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 		<footer class="footer footer-default">
 	    <div class="container">
-	      <p class="text-muted"><i class="fa fa-heart"></i> A Product of Procrastination<a class="pull-right" href="http://jaxsunm.freehostia.com">It's a secret to everyone</a><span class=""fa fa</p>
+	      <p class="text-muted"><i class="fa fa-heart"></i> A Product of Procrastination<a class="pull-right" href="http://jaxsunm.freehostia.com">It's a secret to everyone</a></p>
 	    </div>
 	  </footer>
 
