update OSS contribution section

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <h2>Professional</h2>
-          <p>Currently I work as a Software Engineer at <a href="http://tasktop.com">Tasktop Technologies</a>. There I work with some very clever people creating innovative tools to improve the world of software delivery.</p>
+          <p>Currently I am eployed as a Software Engineer at <a href="http://tasktop.com">Tasktop Technologies</a>. At Tasktop I work with some very clever people creating innovative tools to improve the world of software delivery for individual developers, as well as huge organizations at scale.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <p>Partly due to my role at Tasktop I am also a minor contributor to the great open source project <a href="https://eclipse.org/mylyn">Mylyn</a>, a part of the greater <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem.</p>
+          <p>As a part of my work at Tasktop I am a committer for the <a href="https://eclipse.org/mylyn">Mylyn</a> open source project, a part of the greater <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem. There I work to bring the software development lifecycle into the Eclipse workbench to help make developing software in Eclipse that much more enjoyable.</p>
         </div>
         <div class="col-md-2"></div>
 			</div>
