add app privacy policy

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <p>On the side I've also made one small Android app. If you happen to use the application <a href="https://play.google.com/store/apps/details?id=net.nurik.roman.dashclock">Dashclock</a>, and you want the best integration with Google's SMS app <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.messaging">Messenger</a>, then you should take a look at my little <a href="https://play.google.com/store/apps/details?id=com.jaxsun.messagingdashclockextension">app</a> which brings the two together.</p>
+          <p>On the side I've also made one small Android app. If you happen to use the application <a href="https://play.google.com/store/apps/details?id=net.nurik.roman.dashclock">DashClock</a>, and you want the best integration with Google's SMS app <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.messaging">Android Messages</a>, then you should take a look at my little <a href="https://play.google.com/store/apps/details?id=com.jaxsun.messagingdashclockextension">app</a> which brings the two together.</p>
+          <p>The privacy policy for this app can be found <a href="/messenger-dashclock.html">here</a>.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
