change Messenger to Messages

--- a/messenger-dashclock.html
+++ b/messenger-dashclock.html
@@ -31,8 +31,8 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <h2>Android Messenger for DashClock Privacy Policy</h2>
-          <p>Android Messenger for DashClock reads SMS messages and contact information. This information is only used to display SMS messages and contact names in DashClock.</p>
+          <h2>Android Messages for DashClock Privacy Policy</h2>
+          <p>Android Messages for DashClock reads SMS messages and contact information. This information is only used to display SMS messages and contact names in DashClock.</p>
           <p>No information is otherwise stored by the application, and no information is transmitted to any third parties.</p>
           <p>For further inquiry the developer's contact details can be found on the Google Play Store listing <a href="https://play.google.com/store/apps/details?id=com.jaxsun.messagingdashclockextension">here</a>.</p>
         </div>
