remove defunct app, change links to https

--- a/index.html
+++ b/index.html
@@ -1,137 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Jaxsun McCarthy Huggan</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="img/inv.png">
+  <title>Jaxsun McCarthy Huggan</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Fontawesome -->
-    <link href="css/font-awesome.css" rel="stylesheet">
+  <link rel="icon" href="img/inv.png">
 
-    <!-- Custom Bootstrap CSS -->
-    <link href="css/bootstrap-custom.css" rel="stylesheet">
-  </head>
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <!-- Fontawesome -->
+  <link href="css/font-awesome.css" rel="stylesheet">
 
-  <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#"><i class="fa fa-chevron-up"></i> Jaxsun McCarthy <span class="hidden-xs">Huggan</span></a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <!-- collapsible menu has hooks to collapse on touch -->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav" data-toggle="collapse" data-target="#navbar-collapse">
-            <li><a href="#professional">Professional</a></li>
-            <li><a href="#personal">Personal</a></li>
-          </ul>
-        </div>
+  <!-- Custom Bootstrap CSS -->
+  <link href="css/bootstrap-custom.css" rel="stylesheet">
+</head>
+
+<body>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <i class="fa fa-chevron-up"></i> Jaxsun McCarthy
+          <span class="hidden-xs">Huggan</span>
+        </a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
       </div>
-  	</nav>
+      <!-- collapsible menu has hooks to collapse on touch -->
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav" data-toggle="collapse" data-target="#navbar-collapse">
+          <li>
+            <a href="#professional">Professional</a>
+          </li>
+          <li>
+            <a href="#personal">Personal</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <div class="container well">
-      <div class="jumbotron">
-        <div class="row">
-          <div class="col-md-3 text-center">
-            <img src="img/raven-large.jpg" class="img-circle"></img>
-            <br class="visible-sm">
-        	</div>
-          <div class="col-md-9">
-            <p><i class="fa fa-quote-left pull-left"></i><strong>Welcome stranger,</strong></p>
-            <p>I'm Jaxsun, Nice to meet you.</p>
-            <p>I like to think about, play with, and make things.</p>
-          </div>
+  <div class="container well">
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-md-3 text-center">
+          <img src="img/raven-large.jpg" class="img-circle"></img>
+          <br class="visible-sm">
+        </div>
+        <div class="col-md-9">
+          <p>
+            <i class="fa fa-quote-left pull-left"></i>
+            <strong>Welcome stranger,</strong>
+          </p>
+          <p>I'm Jaxsun, Nice to meet you.</p>
+          <p>I like to think about, play with, and make things.</p>
         </div>
       </div>
     </div>
-    <div class="container well" id="professional">
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h2>Professional</h2>
-          <p>Currently I am eployed as a Software Engineer at <a href="http://tasktop.com">Tasktop Technologies</a>. At Tasktop I work with some very clever people creating innovative tools to improve the world of software delivery for individual developers, as well as huge organizations at scale.</p>
-        </div>
-        <div class="col-md-2"></div>
+  </div>
+  <div class="container well" id="professional">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h2>Professional</h2>
+        <p>
+          Currently I am eployed as a Software Engineer at
+          <a href="https://tasktop.com">Tasktop Technologies</a>. At Tasktop I work with some very clever people creating innovative tools to improve the
+          world of software delivery for individual developers, as well as huge organizations at scale.
+        </p>
       </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <p>As a part of my work at Tasktop I am a committer for the <a href="https://eclipse.org/mylyn">Mylyn</a> open source project, a part of the greater <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem. There I work to bring the software development lifecycle into the Eclipse workbench to help make developing software in Eclipse that much more enjoyable.</p>
-        </div>
-        <div class="col-md-2"></div>
-			</div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <p>On the side I've also made one small Android app. If you happen to use the application <a href="https://play.google.com/store/apps/details?id=net.nurik.roman.dashclock">DashClock</a>, and you want the best integration with Google's SMS app <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.messaging">Android Messages</a>, then you should take a look at my little <a href="https://play.google.com/store/apps/details?id=com.jaxsun.messagingdashclockextension">app</a> which brings the two together.</p>
-          <p>The privacy policy for this app can be found <a href="/messenger-dashclock.html">here</a>.</p>
-        </div>
-        <div class="col-md-2"></div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <p>
+          As a part of my work at Tasktop I am a committer for the
+          <a href="https://eclipse.org/mylyn">Mylyn</a> open source project, a part of the greater
+          <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem. There I work to bring the software development lifecycle into the Eclipse workbench
+          to help make developing software in Eclipse that much more enjoyable.
+        </p>
       </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h2>Academic</h2>
-          <p>I studied Computer Science and Physics (with a sprinkling of Linguistics) at the <a href="http://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great companies like the aforementioned <a href="http://tasktop.com">Tasktop Technologies</a> and <a href="http://safe.com">Safe Software</a>.</p>
-        </div>
-        <div class="col-md-2"></div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h2>Academic</h2>
+        <p>I studied Computer Science and Physics (with a sprinkling of Linguistics) at the
+          <a href="https://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great
+          companies like the aforementioned
+          <a href="https://tasktop.com">Tasktop Technologies</a> and
+          <a href="https://safe.com">Safe Software</a>.</p>
       </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <p>At UBC I was continually involved with the <a href="http://physsoc.phas.ubc.ca">UBC Physics Society</a>, usually as Webmaster or Advertising Co-ordinator, and always as the grumpy old man.</p>
-        </div>
-        <div class="col-md-2"></div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <p>At UBC I was continually involved with the
+          <a href="https://physsoc.phas.ubc.ca">UBC Physics Society</a>, usually as Webmaster or Advertising Co-ordinator, and always as the grumpy old man.</p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+  </div>
+  <div class="container well" id="personal">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h2>Personal</h2>
+        <p>Outside of the office and classroom I play goal in ball hockey, as well a great many video games.</p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <p>If you want to stalk me on the internet I've made it easy for you by having an extremely discoverable name as well
+          as leaving some buttons below.</p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-gg">Google</a>
+        <a href="https://github.com/jaxsun" class="btn btn-sm btn-gh">GitHub</a>
+        <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm btn-li">LinkedIn</a>
+        <br class="visible-xs">
+        <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-t">twitter</a>
+        <a href="https://telegram.me/jaxsun" class="btn btn-sm btn-tl">Telegram</a>
+        <a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-st">Steam</a>
       </div>
     </div>
-    <div class="container well" id="personal">
-      <div class="row">
-      	<div class="col-md-2"></div>
-      	<div class="col-md-8">
-        	<h2>Personal</h2>
-        	<p>Outside of the office and classroom I play goal in ball hockey, as well a great many video games.</p>
-      	</div>
-      	<div class="col-md-2"></div>
-	    </div>
-	    <div class="row">
-	      <div class="col-md-2"></div>
-	      <div class="col-md-8">
-	        <p>If you want to stalk me on the internet I've made it easy for you by having an extremely discoverable name as well as leaving some buttons below.</p>
-	      </div>
-	      <div class="col-md-2"></div>
-	    </div>
-	    <hr>
-	    <div class="row">
-	      <div class="col-md-12 text-center">
-					<a href="https://plus.google.com/+JaxsunMcCarthyHuggan" class="btn btn-sm btn-gg">Google</a>
-	        <a href="https://github.com/jaxsun" class="btn btn-sm btn-gh">GitHub</a>
-	        <a href="https://ca.linkedin.com/in/jaxsun" class="btn btn-sm btn-li">LinkedIn</a>
-					<br class="visible-xs">
-	        <a href="https://twitter.com/jaxsunm" class="btn btn-sm btn-t">twitter</a>
-					<a href="https://telegram.me/jaxsun" class="btn btn-sm btn-tl">Telegram</a>
-					<a href="https://steamcommunity.com/id/Jaxsun" class="btn btn-sm btn-st">Steam</a>
-	    	</div>
-	    </div>
-		</div>
+  </div>
 
-		<footer class="footer footer-default">
-	    <div class="container">
-	      <p class="text-muted"><i class="fa fa-heart"></i> A Product of Procrastination<a class="pull-right" href="http://jaxsunm.freehostia.com">It's a secret to everyone</a></p>
-	    </div>
-	  </footer>
+  <footer class="footer footer-default">
+    <div class="container">
+      <p class="text-muted">
+        <i class="fa fa-heart"></i> A Product of Procrastination
+        <a class="pull-right" href="http://jaxsunm.freehostia.com">It's a secret to everyone</a>
+      </p>
+    </div>
+  </footer>
 
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	  <script src="js/bootstrap.min.js"></script>
-  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+</body>
+
 </html>
