--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="col-md-8">
         <h2>Professional</h2>
         <p>
-          Currently I am eployed as a Software Engineer at
+          Currently I am employed as a Software Engineer at
           <a href="https://tasktop.com">Tasktop Technologies</a>. At Tasktop I work with some very clever people creating innovative tools to improve the
           world of software delivery for individual developers, as well as huge organizations at scale.
         </p>
